see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

07-June-2010 Christophe Demko
 # Fixed issue [#20812] User profile information visible on registration even when disabled. (Amy Stephen)

06-June-2010 Christophe Demko
 # Fixed issue [#20703] Missing noscript warning for javascript disabled browsers (Nikolai Plath)
 # Fixed issue [#20816] CodeMirror does not highlighting css code - syntax selector hard coded (Nikolai Plath)
 # Fixed issue [#19986] implement JAUTHENTICATE_STATUS_CANCEL (Dietrich Streifert)
 # Fixed issue [#18923] JURI::buildQuery does not deal correctly with multidimensional array (Omar Ramos, Antoine BERNIER)

06-June-2010 Jean-Marie Simonet
# [#20853] Sorting by author in Category list. Thanks Phil.
# [#20861] plg_user_joomla missing language declaration in manifest. 
# [#20858] Administrator Editor Media Dialog modal-box height requires scrolling  Thansk Bill.and Ofer.
# [#20843] wrong constant specified for error message in controllerform.php - missing language key. Thanks Bill and Nikolai. + some
# [#20864] Missing cache language strings, cache_lite detection bug [patch]. Thanks Klas. WIP: do sesssion.
# [#20754] missing language string
# [#19430] Cannot change ordering of items (in fact string typo)
 
05-June-2010 Jean-Marie Simonet
# [#20846] Corrected strings for contact creator. Thanks Elin.
# [#20815] When a contact is created automatically via contact creator plugin. Thanks Radek and Phil.
#$ Corrected wrong sprintf
# [#20484] Requested for joomla.json download after uploading image. Thanks John.
# [#20321] Email functions not working properly. Partly fixed only.
 
04-June-2010 Jean-Marie Simonet